<resources>
    <string name="app_name">ChangeXchange</string>
    <string name="title_profile">Profile</string>
    <string name="title_offers">Offers</string>
    <string name="title_messages">Messages</string>

    <string name="title_making_offer">Post an offer</string>
    <string name="offer_send">Submit</string>
    <string name="offer_amount">Amount</string>
    <string name="test">Loading…</string>
    <string name="offer_cancel">Cancel</string>
    <string name="offer_current_rate">This will cost you:</string>
    <string name="offer_reload">Update</string>
    <string name="load_value">Loading…</string>
    <string name="accept_offer">Accept!</string>
    <string name="selected_contact">Contact them now!</string>
    <string name="offer_note_hint"><b>Add a note:</b> Let\'s meet in Terminal 3 I\'ll be the guy in the hawaiian shirt!</string>
    <string name="offer_max_amt">Desired amount</string>
    <string name="change_nickname">Change nickname</string>
    <string name="change_contact">Change contact</string>
    <string name="new_contact">new contact</string>
    <string name="new_nickname">new nickname</string>
    <string name="change_currency">Change currency</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="you_all_set">You\'re all set!</string>
    <string name="title_edit_offer">Edit your offer</string>
    <string name="rate_this_user">Rate this user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_their_nickname_here">Enter their nickname here...</string>
    <string name="interested">Interested</string>
    <string name="requested">Requested!</string>
    <string name="no_offer">You have no offers posted</string>
    <string name="no_interest">No interests registered yet...</string>
</resources>
