<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:onClick="selectOffer"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/offer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/offer_current_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/offer_title"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/offer_current_rate" />

        <TextView
            android:id="@+id/offer_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/offer_title"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/offer_current_rate"
            android:text="@string/load_value" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>