<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/my_offer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="selectOffer"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/my_offer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_offer_current_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_offer_title"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/offer_current_rate" />

        <TextView
            android:id="@+id/my_offer_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_offer_title"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/my_offer_current_rate"
            android:text="@string/load_value" />

        <TextView
            android:id="@+id/my_offer_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/my_offer_current_rate"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/offer_note_hint"
            android:text="@string/test" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/my_offer_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/my_offer_title"
            android:layout_marginEnd="62dp"
            android:clickable="true"
            app:srcCompat="@mipmap/baseline_done_black_48" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/my_offer_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/my_offer_title"
            android:layout_marginRight="5dp"
            android:clickable="true"
            app:srcCompat="@mipmap/baseline_delete_black_48" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/my_offer_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/my_offer_current_rate"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            app:srcCompat="@mipmap/baseline_edit_black_48" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>